[metadata]
name = shapespack
version = 0.1.0
author = Akhmed Kadiev
author_email = Akhmedka1993@gmail.com
description = A simple library for calculating areas of geometric shapes
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AkmemkA/pythonProject1
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7

[options.package_data]
shapes = py.typed
